pkgs/artifacts-cli/tests/cli/snapshots/tests__cli__command_tests__artifact_name_scenario.snap
---
source: tests/cli/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=trace"
    - generate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/artifact_names
    - "--machine=machine-name"
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/artifact_names/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build on /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/artifact_names
TRACE: /run/current-system/sw/bin/nix build --impure -I flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/artifact_names --no-link --print-out-paths --expr 'let
TRACE:   system = "x86_64-linux";
TRACE:   filterAttrs =
TRACE:     pred: set:
TRACE:     builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));
TRACE:   flake = builtins.getFlake (toString <flake>);
TRACE:   pkgs = flake.inputs.nixpkgs.legacyPackages.${system};
TRACE:   nixosConfigurations = builtins.attrNames (
TRACE:     filterAttrs (
TRACE:       machine: configuration: builtins.hasAttr "artifacts" configuration.options
TRACE:     ) flake.nixosConfigurations
TRACE:   );
TRACE:   homeConfigurations =
TRACE:     let
TRACE:       hc = if builtins.hasAttr "homeConfigurations" flake then flake.homeConfigurations else { };
TRACE:     in
TRACE:     builtins.attrNames (
TRACE:       filterAttrs (user: configuration: builtins.hasAttr "artifacts" configuration.options) hc
TRACE:     );
TRACE:   nixos = map (name: {
TRACE:     machine = name;
TRACE:     artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;
TRACE:     config =
TRACE:       if (builtins.hasAttr "config" flake.nixosConfigurations.${name}.config.artifacts) then
TRACE:         flake.nixosConfigurations.${name}.config.artifacts.config
TRACE:       else
TRACE:         { };
TRACE:   }) nixosConfigurations;
TRACE:   home = map (name: {
TRACE:     user = name;
TRACE:     artifacts = flake.homeConfigurations.${name}.config.artifacts.store;
TRACE:     config =
TRACE:       if (builtins.hasAttr "config" flake.homeConfigurations.${name}.config.artifacts) then
TRACE:         flake.homeConfigurations.${name}.config.artifacts.config
TRACE:       else
TRACE:         { };
TRACE:   }) homeConfigurations;
TRACE:   make = { inherit nixos home; };
TRACE: in
TRACE: pkgs.writeText "test.json" (builtins.toJSON make)
TRACE: '
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact.one": {
DEBUG:           "files": {
DEBUG:             "fifth secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "fifth secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/fifth secret"
DEBUG:             },
DEBUG:             "first.secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first.secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first.secret"
DEBUG:             },
DEBUG:             "forthSecret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "forthSecret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/forthSecret"
DEBUG:             },
DEBUG:             "second_secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second_secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second_secret"
DEBUG:             },
DEBUG:             "third-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "third-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/third-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/[hash]-test_generator.sh",
DEBUG:           "name": "artifact.one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-name"
DEBUG:     }
DEBUG:   ]
DEBUG: }
[generate]
DEBUG:     files to produce -> 5 files
DEBUG:       - fifth secret => /run/secrets/fifth secret owner=root group=root
DEBUG:       - first.secret => /run/secrets/first.secret owner=root group=root
DEBUG:       - forthSecret => /run/secrets/forthSecret owner=root group=root
DEBUG:       - second_secret => /run/secrets/second_secret owner=root group=root
DEBUG:       - third-secret => /run/secrets/third-secret owner=root group=root
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-cli/inputs-artifact.one" machine="machine-name" artifact="artifact.one" artifact_context="nixos" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/artifact_names/test_check.sh
Environment variables:
inputs=/tmp/artifacts-cli/inputs-artifact.one
config=/tmp/artifacts-cli/config-artifact.one/config.json
machine=machine-name
artifact=artifact.one
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config-artifact.one/config.json ---
{}
--- End /tmp/artifacts-cli/config-artifact.one/config.json ---

fifth secret
first.secret
forthSecret
second_secret
third-secret
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/artifact.one
DEBUG: run bwrap with command /nix/store/[hash]-test_generator.sh/bin/test_generator.sh
TRACE: bwrap \
TRACE: --unshare-all \
TRACE: --unshare-user \
TRACE: --uid 1000 \
TRACE: --gid 1000 \
TRACE: --tmpfs / \
TRACE: --chdir / \
TRACE: --ro-bind /nix/store /nix/store \
TRACE: --tmpfs /usr/lib/systemd \
TRACE: --proc /proc \
TRACE: --dev /dev \
TRACE: --bind /tmp/artifacts-cli/prompt-artifact.one /tmp/artifacts-cli/prompt-artifact.one \
TRACE: --bind /tmp/artifacts-cli/out-artifact.one /tmp/artifacts-cli/out-artifact.one \
TRACE: --ro-bind /nix/store/[hash]-test_generator.sh/bin /nix/store/[hash]-test_generator.sh/bin \
TRACE: --ro-bind /bin /bin \
TRACE: --ro-bind /usr/bin /usr/bin \
TRACE: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-70cab021bfe35e1e.txt /etc/passwd \
TRACE: -- /bin/sh /nix/store/[hash]-test_generator.sh/bin/test_generator.sh
💾 serialize secrets
Environment variables:
out=/tmp/artifacts-cli/out-artifact.one
config=/tmp/artifacts-cli/config/config.json
machine=machine-name
artifact=artifact.one
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config/config.json ---
{}
--- End /tmp/artifacts-cli/config/config.json ---

=== Content of /tmp/artifacts-cli/out-artifact.one/fifth secret ===
test
=========================
=== Content of /tmp/artifacts-cli/out-artifact.one/first.secret ===
test
=========================
=== Content of /tmp/artifacts-cli/out-artifact.one/forthSecret ===
test
=========================
=== Content of /tmp/artifacts-cli/out-artifact.one/second_secret ===
test
=========================
=== Content of /tmp/artifacts-cli/out-artifact.one/third-secret ===
test
=========================

----- stderr -----
