pkgs/artifacts-cli/tests/cli/snapshots/tests__cli__command_tests__backend_include_scenario.snap
---
source: tests/cli/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=trace"
    - generate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/backend_include
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/backend_include/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
🐛 Running nix build on /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/backend_include
💬 /run/current-system/sw/bin/nix build --impure -I flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/backend_include --no-link --print-out-paths --expr 'let
💬   system = "x86_64-linux";
💬   filterAttrs =
💬     pred: set:
💬     builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));
💬   flake = builtins.getFlake (toString <flake>);
💬   pkgs = flake.inputs.nixpkgs.legacyPackages.${system};
💬   nixosConfigurations = builtins.attrNames (
💬     filterAttrs (
💬       machine: configuration: builtins.hasAttr "artifacts" configuration.options
💬     ) flake.nixosConfigurations
💬   );
💬   homeConfigurations =
💬     let
💬       hc = if builtins.hasAttr "homeConfigurations" flake then flake.homeConfigurations else { };
💬     in
💬     builtins.attrNames (
💬       filterAttrs (user: configuration: builtins.hasAttr "artifacts" configuration.options) hc
💬     );
💬   nixos = map (name: {
💬     machine = name;
💬     artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;
💬     config =
💬       if (builtins.hasAttr "config" flake.nixosConfigurations.${name}.config.artifacts) then
💬         flake.nixosConfigurations.${name}.config.artifacts.config
💬       else
💬         { };
💬   }) nixosConfigurations;
💬   home = map (name: {
💬     user = name;
💬     artifacts = flake.homeConfigurations.${name}.config.artifacts.store;
💬     config =
💬       if (builtins.hasAttr "config" flake.homeConfigurations.${name}.config.artifacts) then
💬         flake.homeConfigurations.${name}.config.artifacts.config
💬       else
💬         { };
💬   }) homeConfigurations;
💬   make = { inherit nixos home; };
💬 in
💬 pkgs.writeText "test.json" (builtins.toJSON make)
💬 '
💬 make config (pretty):
💬 {
💬   "home": [],
💬   "nixos": [
💬     {
💬       "artifacts": {
💬         "test-artifact": {
💬           "files": {
💬             "secret-file": {
💬               "group": "root",
💬               "mode": "0400",
💬               "name": "secret-file",
💬               "owner": "root",
💬               "path": "/run/secrets/secret-file"
💬             }
💬           },
💬           "generator": "/nix/store/[hash]-test_generator.sh",
💬           "name": "test-artifact",
💬           "prompts": {},
💬           "serialization": "test",
💬           "shared": false
💬         }
💬       },
💬       "config": {},
💬       "machine": "machine-name"
💬     }
💬   ]
💬 }
[generate]
🐛 {
🐛   "files": [
🐛     {
🐛       "group": "root",
🐛       "name": "secret-file",
🐛       "owner": "root",
🐛       "path": "/run/secrets/secret-file"
🐛     }
🐛   ],
🐛   "files_to_produce": 1
🐛 }
🐛     running check_serialization: env inputs="/tmp/artifacts-cli/inputs-test-artifact" machine="machine-name" artifact="test-artifact" artifact_context="nixos" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/backend_include/backend_test/check.sh
Environment variables:
inputs=/tmp/artifacts-cli/inputs-test-artifact
config=/tmp/artifacts-cli/config-test-artifact/config.json
machine=machine-name
artifact=test-artifact
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config-test-artifact/config.json ---
{}
--- End /tmp/artifacts-cli/config-test-artifact/config.json ---

🐛     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/test-artifact
🐛 run bwrap with command /nix/store/[hash]-test_generator.sh/bin/test_generator.sh
💬 bwrap \
💬 --unshare-all \
💬 --unshare-user \
💬 --uid 1000 \
💬 --gid 1000 \
💬 --tmpfs / \
💬 --chdir / \
💬 --ro-bind /nix/store /nix/store \
💬 --tmpfs /usr/lib/systemd \
💬 --proc /proc \
💬 --dev /dev \
💬 --bind /tmp/artifacts-cli/prompt-test-artifact /tmp/artifacts-cli/prompt-test-artifact \
💬 --bind /tmp/artifacts-cli/out-test-artifact /tmp/artifacts-cli/out-test-artifact \
💬 --ro-bind /nix/store/[hash]-test_generator.sh/bin /nix/store/[hash]-test_generator.sh/bin \
💬 --ro-bind /bin /bin \
💬 --ro-bind /usr/bin /usr/bin \
💬 --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-820e090949e37de7.txt /etc/passwd \
💬 -- /bin/sh /nix/store/[hash]-test_generator.sh/bin/test_generator.sh
💾 serialize secrets
Environment variables:
out=/tmp/artifacts-cli/out-test-artifact
config=/tmp/artifacts-cli/config/config.json
machine=machine-name
artifact=test-artifact
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config/config.json ---
{}
--- End /tmp/artifacts-cli/config/config.json ---

=== Content of /tmp/artifacts-cli/out-test-artifact/secret-file ===
secret content
=========================

----- stderr -----
