pkgs/artifacts-cli/tests/cli/snapshots/tests__cli__command_tests__list_scenarios.snap
---
source: tests/cli/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=trace"
    - list
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build on /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
TRACE: /run/current-system/sw/bin/nix build --impure -I flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup --no-link --print-out-paths --expr '
TRACE: let
TRACE:   system = "x86_64-linux";
TRACE:   filterAttrs =
TRACE:     pred: set:
TRACE:     builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));
TRACE:   flake = builtins.getFlake (toString <flake>);
TRACE:   pkgs = flake.inputs.nixpkgs.legacyPackages.${system};
TRACE:   nixosConfigurations = builtins.attrNames (
TRACE:     filterAttrs (
TRACE:       machine: configuration: builtins.hasAttr "artifacts" configuration.options
TRACE:     ) flake.nixosConfigurations
TRACE:   );
TRACE:   homeConfigurations =
TRACE:     let hc = if builtins.hasAttr "homeConfigurations" flake then flake.homeConfigurations else {};
TRACE:     in builtins.attrNames (
TRACE:       filterAttrs (
TRACE:         user: configuration: builtins.hasAttr "artifacts" configuration.options
TRACE:       ) hc
TRACE:     );
TRACE:   nixos = map (name: {
TRACE:     machine = name;
TRACE:     artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;
TRACE:     config =
TRACE:       if (builtins.hasAttr "config" flake.nixosConfigurations.${name}.config.artifacts) then
TRACE:         flake.nixosConfigurations.${name}.config.artifacts.config
TRACE:       else
TRACE:         { };
TRACE:   }) nixosConfigurations;
TRACE:   home = map (name: {
TRACE:     user = name;
TRACE:     artifacts = flake.homeConfigurations.${name}.config.artifacts.store;
TRACE:     config =
TRACE:       if (builtins.hasAttr "config" flake.homeConfigurations.${name}.config.artifacts) then
TRACE:         flake.homeConfigurations.${name}.config.artifacts.config
TRACE:       else
TRACE:         { };
TRACE:   }) homeConfigurations;
TRACE:   make = { inherit nixos home; };
TRACE: in
TRACE: pkgs.writeText "test.json" (builtins.toJSON make)
TRACE: '
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-one"
DEBUG:     },
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-two"
DEBUG:     }
DEBUG:   ]
DEBUG: }
[list]
nixos machine: machine-one
artifact: artifact-one
artifact: artifact-two
[list]
nixos machine: machine-two
artifact: artifact-one
artifact: artifact-two

----- stderr -----
